--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,73 @@
-.App {
-  text-align: center;
+.rightArrow, .leftArrow {
+  position: absolute;
+  color: white;
+  right: 50px;
+  font-size: clamp(1rem, 100vw, 3.5rem);
+  bottom: 25px;
+  user-select: none;
+  cursor: pointer;
+  z-index: 12;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.leftArrow {
+  right: 125px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.slide {
+  position: relative;
+  height: 100vh;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.slide .slide-container {
+  position: relative;
+  height: 100%;
+}
+
+.slide-caption {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+
+.slide-container::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: rgba(0,0,0,0.2);
+}
+
+/*FA Icons Decoration*/
+.fa {
+  color: white;
+  margin-right: 20px;
+}
+
+/* INput Styling */
+.input {
+  padding: 6px;
+  border:0;
+  outline: 0;
+  border-bottom: 2px solid white;
+  background: transparent;
+}
+
+::placeholder {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.button {
+  background: transparent;
+  outline: none;
+  border: 0;
+  color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media screen and (max-width: 1200px) {
+  .input, .button {
+    display: none;
   }
 }
